src/passes/02-parsing/jsligo/Tests/contracts/top_level_patterns/negative/jsligo/tuple_record.ts
// TODO: write this in jsligo

// type r = { a : nat ; b : int  ; c : string }

// let r = ( { a = abs(1) ; b = 1 ; c = "H" }
//         , { a = abs(2) ; b = 2 ; c = "E" }
//         , { a = abs(3) ; b = 3 ; c = "L" }
//         )
// let ( { a = a1 ; b = b1 ; c = c1 }
//     , { a = a2 ; b = b2 ; c = a2 }
//     , { a = a3 ; b = b3 ; c = c3 }
//     ) = r
